Much for the day!!

--- a/index.css
+++ b/index.css
@@ -6,6 +6,16 @@
     overflow: hidden;
     animation: typing 4s steps(30, end), blink-caret .75s step-end infinite;
     font-size: 2em;
+    color: #2A3D45;
+  }
+
+  .welcome {
+    color: #2A3D45;
+    font-weight:350 !important;
+  }
+  .footer{
+    color: #2A3D45 !important;
+    font-weight:400 !important;
   }
   
   /* Animation for typing */
@@ -36,4 +46,102 @@
       white-space: normal;
     }
   }
+  nav{
+    background-color: #2A3D45;
+    padding: 20px;
+    
+  }
   
+  .navbar{
+    font-size: larger;
+
+}
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.navbar {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-brand {
+    font-size: 1.75em;
+    font-weight: bold;
+    color: white !important;
+}
+
+.nav-link {
+    font-size: 1.1em;
+    padding: 10px 20px;
+    margin-right: 35px;
+    transition: background-color 0.3s, color 0.3s;
+   color: white;
+   
+}
+
+/* .nav-link:hover {
+    background-color:#f1e2d3d8;
+    color: #fff;
+    border-radius: 5px;
+} */
+
+.nav-item.active .nav-link {
+    background-color: #003366;
+    border-radius: 5px;
+}
+.navbar-nav .nav-link {
+  color: white !important;
+  font-weight: 500;
+}
+
+.nav2{
+  margin-left: 180px;
+}
+
+.navbar-nav .nav-link {
+  color: white !important;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  padding: 10px 15px;
+}
+
+
+/* .navbar-nav .nav-link:hover::before {
+  width: 200%;
+  height: 500%;
+  top: -100%;
+  left: -50%;
+} */
+
+/* .navbar-nav .nav-link:hover {
+  color: #2A3D45 !important; 
+  text-shadow: 0 0 10px #d3c3b2;
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
+} */
+
+body{
+  /* background-color: #ddc9b4b4!important; */
+  background-color: #ECE2D0 !important;
+}
+
+
+
+.navbar-nav .nav-link {
+  color: white !important;
+  transition: transform 0.3s ease, text-shadow 0.3s ease;
+  position: relative;
+}
+
+.navbar-nav .nav-link:hover {
+  transform: scale(1.2);
+  text-shadow: 0 5px 10px rgba(231, 222, 222, 0.6);
+  /* text-decoration: underline; */
+}
+.card-body{
+  background-color:#2A3D45 !important;
+  color: white !important;
+  text-align: center;
+}
