--- a/index.css
+++ b/index.css
@@ -8,6 +8,20 @@
     font-size: 2em;
     color: #2A3D45;
   }
+  .navbar-toggler {
+    border-color: rgb(255, 255, 255) !important;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+}
+.navbar{
+  position: sticky !important;
+  top: 0;
+  z-index: 1000;
+}
+
+
 
   .welcome {
     color: #2A3D45;
@@ -17,6 +31,7 @@
     color: #2A3D45 !important;
     font-weight:400 !important;
   }
+
   
   /* Animation for typing */
   @keyframes typing {
